--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_local_notifications: ^17.2.3
+  flutter_local_notifications: ^17.2.4
+  flutter_timezone: ^3.0.1
+  shared_preferences: ^2.3.2
+  permission_handler: ^11.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
