--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,10 +3,11 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+    id 'com.google.gms.google-services'
 }
 
 android {
-    namespace = "pl.gracke.fitleader.fit_leader"
+    namespace = "pl.gracke.fitleader"
     compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
@@ -22,10 +23,10 @@ android {
     defaultConfig {
         multiDexEnabled = true
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "pl.gracke.fitleader.fit_leader"
+        applicationId = "pl.gracke.fitleader"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = 21
+        minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
@@ -43,3 +44,7 @@ android {
 flutter {
     source = "../.."
 }//
+
+dependencies {
+    implementation platform('com.google.firebase:firebase-bom:33.7.0')
+}
